gobmkida/g1/compute_surrounding_moyo_sizes
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/compute_surrounding_moyo_sizes/src/engine/dragon.c:2548:24: error: use of undeclared identifier 'byte_A07ABF'
v9 = ( unsigned __int8)byte_A07ABF[v6]; 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/compute_surrounding_moyo_sizes/src/obj/1/dragon.o] Error 1
